# Oaixiutu

./: .gitignore  README.md  file_list.txt  tree.json
.github/workflows/: android-ci.yml  android-ci.yml.disabled  release.yml
.trae/documents/: PRD-Alcedo-Android-Showcase.md  Tech-Arch-Alcedo-Android-Showcase.md
AlcedoAndroid/: PORTING_COMPARISON_REPORT.md  alcedo-release.jks  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  init.gradle.kts  settings.gradle.kts
AlcedoAndroid/.github/workflows/: release.yml
AlcedoAndroid/app/: build.gradle.kts  proguard-rules.pro
AlcedoAndroid/app/src/androidTest/java/com/alcedo/studio/: MainActivityInstrumentedTest.kt
AlcedoAndroid/app/src/debug/res/xml/: network_security_config.xml
AlcedoAndroid/app/src/main/: AndroidManifest.xml
AlcedoAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AlcedoAndroid/app/src/main/cpp/core/ai/: ai_description.cpp  ai_description.h  ai_rating.cpp  ai_rating.h  clip_inference.cpp  clip_inference.h  embedding_utils.cpp  embedding_utils.h  hnsw_index.cpp  hnsw_index.h
AlcedoAndroid/app/src/main/cpp/core/decoders/: decoder_scheduler.cpp  decoder_scheduler.h
AlcedoAndroid/app/src/main/cpp/core/edit/: color_matrix.cpp  color_science.cpp  color_science.h  pipeline_service.cpp  pipeline_service.h
AlcedoAndroid/app/src/main/cpp/core/edit/operators/: ahd_demosaic_op.cpp  ahd_demosaic_op.h  amaze_demosaic_op.cpp  amaze_demosaic_op.h  auto_exposure_op.cpp  auto_exposure_op.h  black_op.cpp  black_op.h  channel_mixer_op.cpp  channel_mixer_op.h  clarity_op.cpp  clarity_op.h  color_temp_op.cpp  color_temp_op.h  color_wheel_op.cpp  color_wheel_op.h  contrast_op.cpp  contrast_op.h  crop_rotate_op.cpp  crop_rotate_op.h  cst_op.cpp  cst_op.h  curve_op.cpp  curve_op.h  cv_cvt_op.cpp  cv_cvt_op.h  exposure_op.cpp  exposure_op.h  film_grain_op.cpp  film_grain_op.h  geometry_op.cpp  geometry_op.h  halation_op.cpp  halation_op.h  highlight_op.cpp  highlight_op.h  highlight_reconstruction_op.cpp  highlight_reconstruction_op.h  hls_op.cpp  hls_op.h  (+40 more)
AlcedoAndroid/app/src/main/cpp/core/edit/scope/: scope_analyzer.cpp  scope_analyzer.h
AlcedoAndroid/app/src/main/cpp/core/gpu/: gpu_buffer.cpp  gpu_buffer.h  gpu_context.h  gpu_pipeline.cpp  gpu_pipeline.h
AlcedoAndroid/app/src/main/cpp/core/gpu/gles/: gles_compute.h  gles_context.cpp  gles_context.h  gles_program_library.cpp  gles_program_library.h
AlcedoAndroid/app/src/main/cpp/core/gpu/gles/shaders/: black_white.comp  color_science.comp  color_wheel.comp  common.glsl  contrast.comp  crop_rotate.comp  exposure.comp  film_grain.comp  geometry.comp  halation.comp  highlight_recon.comp  highlights.comp  hsl.comp  lens_correction.comp  lut3d.comp  rcd_demosaic.comp  resize.comp  saturation.comp  shadows.comp  sharpen.comp  tone_curve.comp  tone_region.comp  vibrance.comp  vignette.comp  white_balance.comp
AlcedoAndroid/app/src/main/cpp/core/gpu/vulkan/: vulkan_compute.cpp  vulkan_compute.h  vulkan_context.cpp  vulkan_context.h
AlcedoAndroid/app/src/main/cpp/core/image/: denoise.cpp  denoise.h  image.cpp  image.h  image_buffer.cpp  image_buffer.h  image_pool.cpp  image_pool.h  metadata_decoder.cpp  metadata_decoder.h  metadata_extractor.cpp  metadata_extractor.h  raw_decoder.cpp  raw_decoder.h  thumbnail_decoder.cpp  thumbnail_decoder.h
AlcedoAndroid/app/src/main/cpp/core/io/: export_icc_profile_resolver.cpp  export_icc_profile_resolver.h  image_loader.cpp  image_loader.h  image_writer.cpp  image_writer.h  ultra_hdr_writer.cpp  ultra_hdr_writer.h
AlcedoAndroid/app/src/main/cpp/core/renderer/: pipeline_scheduler.cpp  pipeline_scheduler.h
AlcedoAndroid/app/src/main/cpp/core/sleeve/: dentry_cache_manager.cpp  dentry_cache_manager.h  filter_combo.cpp  filter_combo.h  path_resolver.cpp  path_resolver.h  sleeve_base.cpp  sleeve_base.h  sleeve_element.cpp  sleeve_element.h  sleeve_element_factory.cpp  sleeve_element_factory.h  sleeve_file.cpp  sleeve_file.h  sleeve_filesystem.cpp  sleeve_filesystem.h  sleeve_filter.cpp  sleeve_filter.h  sleeve_folder.cpp  sleeve_folder.h  sleeve_manager.cpp  sleeve_manager.h  sleeve_view.cpp  sleeve_view.h  storage_service.cpp  storage_service.h
AlcedoAndroid/app/src/main/cpp/core/utils/: app_logging.cpp  app_logging.h  concurrent_queue.h  crash_handler.cpp  crash_handler.h  file_utils.cpp  hash.cpp  id_generator.cpp  id_generator.h  import_error_code.h  import_log.h  lru_cache.h  profiler.h  simple_simd.h  string_convert.h  thread_local_resource.h  thread_pool.cpp  thread_pool.h  time_provider.cpp  time_provider.h
AlcedoAndroid/app/src/main/java/com/alcedo/studio/: AlcedoApplication.kt  MainActivity.kt
AlcedoAndroid/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
AlcedoAndroid/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
AlcedoAndroid/app/src/main/res/values-en/: strings.xml
AlcedoAndroid/app/src/main/res/values-night/: themes.xml
AlcedoAndroid/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
AlcedoAndroid/gradle/wrapper/: gradle-wrapper.properties
showcase/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
showcase/src/: data.ts  index.css  store.ts
showcase/src/components/: EditorToolStrip.tsx  PhoneShell.tsx  SidePanel.tsx  icons.tsx
showcase/src/pages/: Home.tsx
showcase/src/screens/: AISearchScreen.tsx  ColorScreen.tsx  EditorScreen.tsx  ExportScreen.tsx  FilmScreen.tsx  GalleryScreen.tsx  SettingsScreen.tsx
(+226 files in other folders)
